--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -1,6 +1,7 @@
 <resources>
     <style name="Widget.App.CardView" parent="Widget.MaterialComponents.CardView">
         <item name="cardElevation">@dimen/card_elevation</item>
+        <item name="cardCornerRadius">@dimen/card_corner_radius</item>
     </style>
 
     <style name="Widget.App.TextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">
@@ -31,6 +32,4 @@
         <item name="cornerFamily">cut</item>
         <item name="cornerSize">2dp</item>
     </style>
-
-    <dimen name="card_elevation">4dp</dimen>
 </resources>
