--- a/core/src/main/res/values/dimens.xml
+++ b/core/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="size_image">128dp</dimen>
+    <dimen name="size_image_post_details">160dp</dimen>
+    <dimen name="size_image">80dp</dimen>
     <dimen name="margin_vertical">16dp</dimen>
     <dimen name="margin_horizontal">16dp</dimen>
     <dimen name="card_elevation">4dp</dimen>
