--- a/app/src/main/res/layout/fragment_posts_detail.xml
+++ b/app/src/main/res/layout/fragment_posts_detail.xml
@@ -8,6 +8,16 @@
     android:layout_height="match_parent"
     tools:context=".PostsDetailFragment">
 
+    <ImageView
+        android:id="@+id/userImageView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintWidth_percent="0.3"
+        app:layout_constraintBottom_toTopOf="@+id/commentsRecyclerView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/content_description_user_image"/>
+
     <TextView
         android:id="@+id/postTitleTextView"
         style="@style/TextAppearance.App.Headline5"
@@ -18,7 +28,7 @@
         android:layout_marginBottom="@dimen/margin_vertical"
         app:layout_constraintBottom_toTopOf="@+id/postBodyTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/userImageView"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Disappointing. I have starred at this tracker a couple of times during our stay."/>
 
@@ -32,7 +42,7 @@
         android:layout_marginBottom="@dimen/margin_vertical"
         app:layout_constraintBottom_toTopOf="@+id/userNameTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/userImageView"
         app:layout_constraintTop_toBottomOf="@+id/postTitleTextView"
         tools:text="I STAKED OUT MY LOCAL DOMINO’S TO SEE JUST HOW ACCURATE ITS PIZZA TRACKER IS"/>
 
@@ -46,7 +56,7 @@
         android:layout_marginBottom="@dimen/margin_vertical"
         app:layout_constraintBottom_toTopOf="@+id/commentsCountTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/userImageView"
         app:layout_constraintTop_toBottomOf="@+id/postBodyTextView"
         tools:text="Leonhard Mashad"/>
 
@@ -60,7 +70,7 @@
         android:layout_marginBottom="@dimen/margin_vertical"
         app:layout_constraintBottom_toTopOf="@+id/commentsRecyclerView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/userImageView"
         app:layout_constraintTop_toBottomOf="@+id/userNameTextView"
         tools:text="Number of comments: 7"/>
 
