--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -33,6 +33,8 @@
             style="@style/TextAppearance.MaterialComponents.Headline5"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:layout_marginStart="@dimen/margin_horizontal"
             app:layout_constraintBottom_toTopOf="@id/bodyTextView"
             app:layout_constraintEnd_toEndOf="parent"
@@ -44,6 +46,8 @@
             style="@style/TextAppearance.MaterialComponents.Body1"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="5"
             android:layout_marginStart="@dimen/margin_horizontal"
             app:layout_constraintBottom_toBottomOf="@id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
