--- a/app/src/main/res/layout/fragment_posts_detail.xml
+++ b/app/src/main/res/layout/fragment_posts_detail.xml
@@ -16,6 +16,7 @@
         android:contentDescription="@string/content_description_user_image"
         android:cropToPadding="true"
         android:scaleType="centerCrop"
+        android:transitionName="@string/transition_image"
         app:layout_constraintBottom_toTopOf="@+id/postTitleTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.3"
@@ -28,9 +29,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_horizontal"
+        android:layout_marginTop="@dimen/margin_vertical"
         android:layout_marginEnd="@dimen/margin_horizontal"
         android:layout_marginBottom="@dimen/margin_vertical"
-        android:layout_marginTop="@dimen/margin_vertical"
         app:layout_constraintBottom_toTopOf="@+id/postBodyTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
