--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+<com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/margin_card">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/margin_vertical"
         android:background="?attr/selectableItemBackground"
         android:paddingStart="@dimen/margin_horizontal"
         android:paddingEnd="@dimen/margin_horizontal">
@@ -18,6 +18,8 @@
             android:id="@+id/imageView"
             android:layout_width="0dp"
             android:layout_height="@dimen/size_image"
+            android:layout_marginTop="@dimen/margin_horizontal"
+            android:layout_marginBottom="@dimen/margin_horizontal"
             android:contentDescription="@string/content_description_post_image"
             android:scaleType="fitCenter"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -34,6 +36,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_horizontal"
+            android:layout_marginTop="@dimen/margin_horizontal"
             android:ellipsize="end"
             android:maxLines="1"
             app:layout_constraintBottom_toTopOf="@id/bodyTextView"
@@ -47,6 +50,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_horizontal"
+            android:layout_marginBottom="@dimen/margin_horizontal"
             android:ellipsize="end"
             android:maxLines="5"
             app:layout_constraintBottom_toBottomOf="@id/imageView"
@@ -56,4 +60,4 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
