--- a/app/src/main/res/layout-land/fragment_posts_detail.xml
+++ b/app/src/main/res/layout-land/fragment_posts_detail.xml
@@ -13,56 +13,70 @@
         android:orientation="vertical"
         tools:context=".PostsDetailFragment">
 
-        <ImageView
-            android:id="@+id/userImageView"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/size_image_post_details"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/content_description_user_image"
-            android:cropToPadding="true"
-            android:scaleType="centerCrop"
-            android:transitionName="@string/transition_image"/>
-
-        <TextView
-            android:id="@+id/postTitleTextView"
-            style="@style/TextAppearance.App.Headline5"
+        <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_horizontal"
-            android:layout_marginTop="@dimen/margin_vertical"
-            android:layout_marginEnd="@dimen/margin_horizontal"
-            android:layout_marginBottom="@dimen/margin_vertical"
-            tools:text="Disappointing. I have starred at this tracker a couple of times during our stay."/>
+            android:layout_margin="@dimen/margin_card">
 
-        <TextView
-            android:id="@+id/postBodyTextView"
-            style="@style/TextAppearance.MaterialComponents.Body1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_horizontal"
-            android:layout_marginEnd="@dimen/margin_horizontal"
-            android:layout_marginBottom="@dimen/margin_vertical"
-            tools:text="I STAKED OUT MY LOCAL DOMINO’S TO SEE JUST HOW ACCURATE ITS PIZZA TRACKER IS"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/userNameTextView"
-            style="@style/TextAppearance.MaterialComponents.Body1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_horizontal"
-            android:layout_marginEnd="@dimen/margin_horizontal"
-            android:layout_marginBottom="@dimen/margin_vertical"
-            tools:text="Leonhard Mashad"/>
+                <ImageView
+                    android:id="@+id/userImageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/size_image_post_details"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@string/content_description_user_image"
+                    android:cropToPadding="true"
+                    android:scaleType="centerCrop"
+                    android:transitionName="@string/transition_image"/>
 
-        <TextView
-            android:id="@+id/commentsCountTextView"
-            style="@style/TextAppearance.MaterialComponents.Body1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_horizontal"
-            android:layout_marginEnd="@dimen/margin_horizontal"
-            android:layout_marginBottom="@dimen/margin_vertical"
-            tools:text="Number of comments: 7"/>
+                <TextView
+                    android:id="@+id/postTitleTextView"
+                    style="@style/TextAppearance.App.Headline5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_horizontal"
+                    android:layout_marginTop="@dimen/margin_vertical"
+                    android:layout_marginEnd="@dimen/margin_horizontal"
+                    android:layout_marginBottom="@dimen/margin_vertical"
+                    tools:text="Disappointing. I have starred at this tracker a couple of times during our stay."/>
+
+                <TextView
+                    android:id="@+id/postBodyTextView"
+                    style="@style/TextAppearance.MaterialComponents.Body1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_horizontal"
+                    android:layout_marginEnd="@dimen/margin_horizontal"
+                    android:layout_marginBottom="@dimen/margin_vertical"
+                    tools:text="I STAKED OUT MY LOCAL DOMINO’S TO SEE JUST HOW ACCURATE ITS PIZZA TRACKER IS"/>
+
+                <TextView
+                    android:id="@+id/userNameTextView"
+                    style="@style/TextAppearance.MaterialComponents.Body1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_horizontal"
+                    android:layout_marginEnd="@dimen/margin_horizontal"
+                    android:layout_marginBottom="@dimen/margin_vertical"
+                    tools:text="Leonhard Mashad"/>
+
+                <TextView
+                    android:id="@+id/commentsCountTextView"
+                    style="@style/TextAppearance.MaterialComponents.Body1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin_horizontal"
+                    android:layout_marginEnd="@dimen/margin_horizontal"
+                    android:layout_marginBottom="@dimen/margin_vertical"
+                    tools:text="Number of comments: 7"/>
+
+            </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/commentsRecyclerView"
