--- a/core/src/main/res/values/dimens.xml
+++ b/core/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="size_image">80dp</dimen>
     <dimen name="margin_vertical">16dp</dimen>
     <dimen name="margin_horizontal">16dp</dimen>
-    <dimen name="card_elevation">4dp</dimen>
-    <dimen name="card_corner_radius">4dp</dimen>
+    <dimen name="margin_card">8dp</dimen>
+    <dimen name="corner_radius">8dp</dimen>
+    <dimen name="card_elevation">8dp</dimen>
 </resources>
