--- a/app/src/main/res/layout/fragment_posts_detail_card.xml
+++ b/app/src/main/res/layout/fragment_posts_detail_card.xml
@@ -1,91 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.google.android.material.card.MaterialCardView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/margin_vertical"
-    app:layout_collapseMode="parallax"
-    app:layout_collapseParallaxMultiplier="0.5">
+    android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/margin_vertical">
 
-        <ImageView
-            android:id="@+id/postImageView"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/size_image_post_details"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/content_description_user_image"
-            android:cropToPadding="true"
-            android:scaleType="centerCrop"
-            android:transitionName="@string/transition_image"
-            app:layout_constraintBottom_toTopOf="@+id/postTitleTextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/postTitleTextView"
-            style="@style/TextAppearance.App.Headline5"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_horizontal"
-            android:layout_marginTop="@dimen/margin_vertical"
-            android:layout_marginEnd="@dimen/margin_horizontal"
-            android:layout_marginBottom="@dimen/margin_vertical"
-            app:layout_constraintBottom_toTopOf="@+id/postBodyTextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/postImageView"
-            tools:text="Disappointing. I have starred at this tracker a couple of times during our stay."/>
+            <ImageView
+                android:id="@+id/postImageView"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/size_image_post_details"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/content_description_user_image"
+                android:cropToPadding="true"
+                android:scaleType="centerCrop"
+                android:transitionName="@string/transition_image"
+                app:layout_constraintBottom_toTopOf="@+id/postTitleTextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHeight_percent="0.3"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
-        <TextView
-            android:id="@+id/postBodyTextView"
-            style="@style/TextAppearance.MaterialComponents.Body1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_horizontal"
-            android:layout_marginEnd="@dimen/margin_horizontal"
-            android:layout_marginBottom="@dimen/margin_vertical"
-            app:layout_constraintBottom_toTopOf="@+id/userNameTextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/postTitleTextView"
-            tools:text="I STAKED OUT MY LOCAL DOMINO’S TO SEE JUST HOW ACCURATE ITS PIZZA TRACKER IS"/>
+            <TextView
+                android:id="@+id/postTitleTextView"
+                style="@style/TextAppearance.App.Headline5"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_horizontal"
+                android:layout_marginTop="@dimen/margin_vertical"
+                android:layout_marginEnd="@dimen/margin_horizontal"
+                android:layout_marginBottom="@dimen/margin_vertical"
+                app:layout_constraintBottom_toTopOf="@+id/postBodyTextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/postImageView"
+                tools:text="Disappointing. I have starred at this tracker a couple of times during our stay."/>
 
-        <TextView
-            android:id="@+id/userNameTextView"
-            style="@style/TextAppearance.MaterialComponents.Body1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_horizontal"
-            android:layout_marginEnd="@dimen/margin_horizontal"
-            android:layout_marginBottom="@dimen/margin_vertical"
-            app:layout_constraintBottom_toTopOf="@+id/commentsCountTextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/postBodyTextView"
-            tools:text="Leonhard Mashad"/>
+            <TextView
+                android:id="@+id/postBodyTextView"
+                style="@style/TextAppearance.MaterialComponents.Body1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_horizontal"
+                android:layout_marginEnd="@dimen/margin_horizontal"
+                android:layout_marginBottom="@dimen/margin_vertical"
+                app:layout_constraintBottom_toTopOf="@+id/userNameTextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/postTitleTextView"
+                tools:text="I STAKED OUT MY LOCAL DOMINO’S TO SEE JUST HOW ACCURATE ITS PIZZA TRACKER IS"/>
 
-        <TextView
-            android:id="@+id/commentsCountTextView"
-            style="@style/TextAppearance.MaterialComponents.Body1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_horizontal"
-            android:layout_marginEnd="@dimen/margin_horizontal"
-            android:layout_marginBottom="@dimen/margin_vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/userNameTextView"
-            tools:text="Number of comments: 7"/>
+            <TextView
+                android:id="@+id/userNameTextView"
+                style="@style/TextAppearance.MaterialComponents.Body1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_horizontal"
+                android:layout_marginEnd="@dimen/margin_horizontal"
+                android:layout_marginBottom="@dimen/margin_vertical"
+                app:layout_constraintBottom_toTopOf="@+id/commentsCountTextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/postBodyTextView"
+                tools:text="Leonhard Mashad"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/commentsCountTextView"
+                style="@style/TextAppearance.MaterialComponents.Body1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_horizontal"
+                android:layout_marginEnd="@dimen/margin_horizontal"
+                android:layout_marginBottom="@dimen/margin_vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/userNameTextView"
+                tools:text="Number of comments: 7"/>
 
-</com.google.android.material.card.MaterialCardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+
+    <TextView
+        style="@style/TextAppearance.App.Headline5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_horizontal"
+        android:layout_marginEnd="@dimen/margin_horizontal"
+        android:layout_marginBottom="@dimen/margin_vertical"
+        android:textColor="?android:attr/textColorPrimaryInverse"
+        android:text="@string/comments_title"/>
+
+</LinearLayout>
