--- a/app/src/main/res/layout/fragment_posts_detail_card.xml
+++ b/app/src/main/res/layout/fragment_posts_detail_card.xml
@@ -6,6 +6,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:layout_collapseMode="parallax"
+    app:layout_collapseParallaxMultiplier="0.5"
     android:orientation="vertical">
 
     <com.google.android.material.card.MaterialCardView
