--- a/postdetails/src/main/res/layout/fragment_posts_detail_card.xml
+++ b/postdetails/src/main/res/layout/fragment_posts_detail_card.xml
@@ -101,6 +101,6 @@
         android:layout_marginEnd="@dimen/margin_horizontal"
         android:layout_marginBottom="@dimen/margin_vertical"
         android:textColor="?android:attr/textColorPrimaryInverse"
-        android:text="@string/comments_title"/>
+        android:text="@string/title_comments"/>
 
 </LinearLayout>
