--- a/postdetails/src/main/res/layout/fragment_posts_detail_card.xml
+++ b/postdetails/src/main/res/layout/fragment_posts_detail_card.xml
@@ -15,81 +15,62 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/margin_vertical">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/postImageView"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="@dimen/size_image_post_details"
                 android:contentDescription="@string/content_description_user_image"
                 android:scaleType="centerCrop"
                 android:transitionName="@string/transition_image"
-                app:layout_constraintBottom_toTopOf="@+id/postTitleTextView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHeight_percent="0.3"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintBottom_toTopOf="@+id/postTitleTextView"/>
 
             <TextView
                 android:id="@+id/postTitleTextView"
                 style="@style/TextAppearance.App.Headline5"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_horizontal"
                 android:layout_marginTop="@dimen/margin_vertical"
                 android:layout_marginEnd="@dimen/margin_horizontal"
                 android:layout_marginBottom="@dimen/margin_vertical"
-                app:layout_constraintBottom_toTopOf="@+id/postBodyTextView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/postImageView"
                 tools:text="Disappointing. I have starred at this tracker a couple of times during our stay."/>
 
             <TextView
                 android:id="@+id/postBodyTextView"
                 style="@style/TextAppearance.MaterialComponents.Body1"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_horizontal"
                 android:layout_marginEnd="@dimen/margin_horizontal"
                 android:layout_marginBottom="@dimen/margin_vertical"
-                app:layout_constraintBottom_toTopOf="@+id/userNameTextView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/postTitleTextView"
                 tools:text="I STAKED OUT MY LOCAL DOMINO’S TO SEE JUST HOW ACCURATE ITS PIZZA TRACKER IS"/>
 
             <TextView
                 android:id="@+id/userNameTextView"
                 style="@style/TextAppearance.MaterialComponents.Body1"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_horizontal"
                 android:layout_marginEnd="@dimen/margin_horizontal"
                 android:layout_marginBottom="@dimen/margin_vertical"
-                app:layout_constraintBottom_toTopOf="@+id/commentsCountTextView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/postBodyTextView"
                 tools:text="Leonhard Mashad"/>
 
             <TextView
                 android:id="@+id/commentsCountTextView"
                 style="@style/TextAppearance.MaterialComponents.Body1"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_horizontal"
                 android:layout_marginEnd="@dimen/margin_horizontal"
                 android:layout_marginBottom="@dimen/margin_vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/userNameTextView"
                 tools:text="Number of comments: 7"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
